Création de la classe page et récupération des données sur un label

--- a/Lecture_BDD/TableauB.ui
+++ b/Lecture_BDD/TableauB.ui
@@ -161,7 +161,7 @@
       <widget class="QLineEdit" name="lineEdit1"/>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="lineEdit2"/>
      </item>
     </layout>
    </item>
