test bouton plan entreprise

--- a/Projet_Ajour/gestion.ui
+++ b/Projet_Ajour/gestion.ui
@@ -22,6 +22,11 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Accueil</string>
    </property>
@@ -34,6 +39,11 @@
      <width>191</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Gestion des accès</string>
@@ -48,6 +58,11 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Périmètres</string>
    </property>
@@ -60,6 +75,11 @@
      <width>191</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Identification zones</string>
@@ -110,9 +130,9 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>90</x>
      <y>191</y>
-     <width>471</width>
+     <width>421</width>
      <height>491</height>
     </rect>
    </property>
@@ -269,9 +289,9 @@
   <widget class="QTableWidget" name="tableWidget_2">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>630</x>
      <y>190</y>
-     <width>451</width>
+     <width>421</width>
      <height>131</height>
     </rect>
    </property>
@@ -312,9 +332,9 @@
   <widget class="QTableWidget" name="tableWidget_3">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>630</x>
      <y>370</y>
-     <width>451</width>
+     <width>421</width>
      <height>351</height>
     </rect>
    </property>
@@ -363,6 +383,24 @@
      <string>RSE</string>
     </property>
    </column>
+  </widget>
+  <widget class="QPushButton" name="ButtonEntrer">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>730</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Entrer</string>
+   </property>
   </widget>
  </widget>
  <resources/>
