--- a/Projet_Ajour/zones.ui
+++ b/Projet_Ajour/zones.ui
@@ -86,7 +86,7 @@
     <string>Identification Zones</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="labelPlan">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -108,7 +108,7 @@
     <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="BatimentAccueil">
+  <widget class="QPushButton" name="ButtonBatA">
    <property name="geometry">
     <rect>
      <x>820</x>
@@ -333,7 +333,7 @@
     <string>Accueil</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="BatimentAutre">
+  <widget class="QPushButton" name="ButtonBatB">
    <property name="geometry">
     <rect>
      <x>800</x>
@@ -438,14 +438,14 @@
     </property>
    </column>
   </widget>
-  <zorder>label_3</zorder>
-  <zorder>BatimentAccueil</zorder>
+  <zorder>labelPlan</zorder>
+  <zorder>ButtonBatA</zorder>
   <zorder>ButtonAccueil</zorder>
   <zorder>ButtonGestion</zorder>
   <zorder>ButtonPerimetres</zorder>
   <zorder>ButtonZones</zorder>
   <zorder>label</zorder>
-  <zorder>BatimentAutre</zorder>
+  <zorder>ButtonBatB</zorder>
   <zorder>label_4</zorder>
   <zorder>tableWidget_2</zorder>
  </widget>
