--- a/Projet_Ajour/gestion.ui
+++ b/Projet_Ajour/gestion.ui
@@ -10,6 +10,12 @@
     <height>780</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -34,7 +40,7 @@
   <widget class="QPushButton" name="ButtonGestion">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>200</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -52,7 +58,7 @@
   <widget class="QPushButton" name="ButtonPerimetres">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>480</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -70,7 +76,7 @@
   <widget class="QPushButton" name="ButtonZones">
    <property name="geometry">
     <rect>
-     <x>820</x>
+     <x>770</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -88,7 +94,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>480</x>
+     <x>470</x>
      <y>30</y>
      <width>211</width>
      <height>41</height>
@@ -106,9 +112,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>140</y>
-     <width>481</width>
+     <x>20</x>
+     <y>150</y>
+     <width>521</width>
      <height>51</height>
     </rect>
    </property>
@@ -116,6 +122,14 @@
     <font>
      <pointsize>18</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+    background-color: gray;
+	color: #ffffff; /* Couleur du texte (blanc dans cet exemple) */
+    border: none;
+}
+</string>
    </property>
    <property name="text">
     <string>Listes des accès</string>
@@ -130,9 +144,9 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>191</y>
-     <width>421</width>
+     <x>20</x>
+     <y>201</y>
+     <width>521</width>
      <height>491</height>
     </rect>
    </property>
@@ -181,32 +195,43 @@
      <string>Acces périmètre</string>
     </property>
    </column>
+   <column>
+    <property name="text">
+     <string>Bâtiment</string>
+    </property>
+   </column>
   </widget>
   <widget class="QLineEdit" name="lineEditNom">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>700</y>
+     <x>40</x>
+     <y>710</y>
      <width>113</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEditPrenom">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>700</y>
+     <x>160</x>
+     <y>710</y>
      <width>113</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEditMail">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>700</y>
+     <x>280</x>
+     <y>710</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -215,8 +240,8 @@
   <widget class="QLineEdit" name="lineEditAcces">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>700</y>
+     <x>400</x>
+     <y>710</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -225,8 +250,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>679</y>
+     <x>40</x>
+     <y>689</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -241,8 +266,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>680</y>
+     <x>160</x>
+     <y>690</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -257,8 +282,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>680</y>
+     <x>280</x>
+     <y>690</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -273,8 +298,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>680</y>
+     <x>400</x>
+     <y>690</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -289,8 +314,8 @@
   <widget class="QTableWidget" name="tableWidget_2">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>190</y>
+     <x>650</x>
+     <y>200</y>
      <width>421</width>
      <height>131</height>
     </rect>
@@ -332,8 +357,8 @@
   <widget class="QTableWidget" name="tableWidget_3">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>370</y>
+     <x>650</x>
+     <y>380</y>
      <width>421</width>
      <height>351</height>
     </rect>
@@ -387,8 +412,8 @@
   <widget class="QPushButton" name="ButtonEntrer">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>730</y>
+     <x>220</x>
+     <y>740</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -402,6 +427,24 @@
     <string>Entrer</string>
    </property>
   </widget>
+  <zorder>ButtonAccueil</zorder>
+  <zorder>ButtonGestion</zorder>
+  <zorder>ButtonPerimetres</zorder>
+  <zorder>ButtonZones</zorder>
+  <zorder>label</zorder>
+  <zorder>tableWidget</zorder>
+  <zorder>lineEditNom</zorder>
+  <zorder>lineEditPrenom</zorder>
+  <zorder>lineEditMail</zorder>
+  <zorder>lineEditAcces</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>tableWidget_2</zorder>
+  <zorder>tableWidget_3</zorder>
+  <zorder>ButtonEntrer</zorder>
+  <zorder>label_2</zorder>
  </widget>
  <resources/>
  <connections/>
