--- a/Projet_Ajour/zones.ui
+++ b/Projet_Ajour/zones.ui
@@ -32,7 +32,7 @@
   <widget class="QPushButton" name="ButtonGestion">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>180</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -45,7 +45,7 @@
   <widget class="QPushButton" name="ButtonPerimetres">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>460</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -58,7 +58,7 @@
   <widget class="QPushButton" name="ButtonZones">
    <property name="geometry">
     <rect>
-     <x>820</x>
+     <x>740</x>
      <y>90</y>
      <width>191</width>
      <height>51</height>
@@ -71,7 +71,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>440</x>
      <y>30</y>
      <width>241</width>
      <height>31</height>
@@ -93,7 +93,7 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>170</y>
+     <y>180</y>
      <width>601</width>
      <height>581</height>
     </rect>
@@ -112,7 +112,7 @@
    <property name="geometry">
     <rect>
      <x>820</x>
-     <y>260</y>
+     <y>270</y>
      <width>81</width>
      <height>61</height>
     </rect>
@@ -337,7 +337,7 @@
    <property name="geometry">
     <rect>
      <x>800</x>
-     <y>450</y>
+     <y>460</y>
      <width>101</width>
      <height>61</height>
     </rect>
@@ -359,37 +359,13 @@
     <string>Batiment</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>140</y>
-     <width>421</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>18</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Listes des accès</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="wordWrap">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QTableWidget" name="tableWidget_2">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>190</y>
-     <width>421</width>
-     <height>521</height>
+     <x>20</x>
+     <y>231</y>
+     <width>521</width>
+     <height>491</height>
     </rect>
    </property>
    <row>
@@ -437,6 +413,43 @@
      <string>Acces périmètre</string>
     </property>
    </column>
+   <column>
+    <property name="text">
+     <string>Bâtiment</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>521</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+    background-color: gray;
+	color: #ffffff; /* Couleur du texte (blanc dans cet exemple) */
+    border: none;
+}
+</string>
+   </property>
+   <property name="text">
+    <string>Listes des accès</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
+   </property>
   </widget>
   <zorder>labelPlan</zorder>
   <zorder>ButtonBatA</zorder>
@@ -446,8 +459,8 @@
   <zorder>ButtonZones</zorder>
   <zorder>label</zorder>
   <zorder>ButtonBatB</zorder>
-  <zorder>label_4</zorder>
-  <zorder>tableWidget_2</zorder>
+  <zorder>tableWidget</zorder>
+  <zorder>label_2</zorder>
  </widget>
  <resources/>
  <connections/>
