--- a/Projet_Ajour/zones.ui
+++ b/Projet_Ajour/zones.ui
@@ -359,7 +359,7 @@
     <string>Batiment B</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QTableWidget" name="tableWidgetAcces">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -485,7 +485,7 @@
   <zorder>ButtonZones</zorder>
   <zorder>label</zorder>
   <zorder>ButtonBatB</zorder>
-  <zorder>tableWidget</zorder>
+  <zorder>tableWidgetAcces</zorder>
   <zorder>label_2</zorder>
   <zorder>ButtonBatC</zorder>
  </widget>
