--- a/Projet_Ajour/RDR.ui
+++ b/Projet_Ajour/RDR.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1186</width>
-    <height>674</height>
+    <height>728</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,14 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="16" column="1">
-      <widget class="QCheckBox" name="checkBox_3">
+      <widget class="QCheckBox" name="Differee">
        <property name="text">
         <string>Différee</string>
        </property>
       </widget>
      </item>
      <item row="8" column="2">
-      <widget class="QComboBox" name="comboBox_4"/>
+      <widget class="QComboBox" name="NivPyramide"/>
      </item>
      <item row="13" column="2">
       <widget class="QLabel" name="label_12">
@@ -34,7 +34,7 @@
       </widget>
      </item>
      <item row="9" column="0">
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="OrigineActionVCSA">
        <property name="text">
         <string>Origine action VCSA?</string>
        </property>
@@ -48,7 +48,7 @@
       </widget>
      </item>
      <item row="4" column="0">
-      <widget class="QComboBox" name="comboBox_2"/>
+      <widget class="QComboBox" name="Secteur"/>
      </item>
      <item row="7" column="0">
       <widget class="QLabel" name="label_7">
@@ -81,7 +81,7 @@
       </widget>
      </item>
      <item row="22" column="0" colspan="3">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="BouttonValide">
        <property name="text">
         <string>Valider</string>
        </property>
@@ -111,7 +111,7 @@
       </spacer>
      </item>
      <item row="18" column="2">
-      <widget class="QLineEdit" name="lineEdit_3"/>
+      <widget class="QLineEdit" name="DateResolution"/>
      </item>
      <item row="20" column="0" colspan="3">
       <widget class="QLabel" name="label_15">
@@ -121,19 +121,19 @@
       </widget>
      </item>
      <item row="14" column="0" rowspan="5">
-      <widget class="QTextEdit" name="textEdit_2"/>
+      <widget class="QTextEdit" name="Action"/>
      </item>
      <item row="8" column="0">
-      <widget class="QComboBox" name="comboBox_3"/>
+      <widget class="QComboBox" name="TypologieRisque"/>
      </item>
      <item row="18" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="NumID"/>
      </item>
      <item row="11" column="0" colspan="3">
-      <widget class="QTextEdit" name="textEdit"/>
+      <widget class="QTextEdit" name="Constat"/>
      </item>
      <item row="1" column="1">
-      <widget class="QComboBox" name="comboBox"/>
+      <widget class="QComboBox" name="Redacteur"/>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label_2">
@@ -164,7 +164,7 @@
       </widget>
      </item>
      <item row="16" column="2">
-      <widget class="QComboBox" name="comboBox_6"/>
+      <widget class="QComboBox" name="ContributaurAction"/>
      </item>
      <item row="17" column="1">
       <widget class="QLabel" name="label_11">
@@ -181,17 +181,17 @@
       </widget>
      </item>
      <item row="14" column="1" rowspan="2">
-      <widget class="QCheckBox" name="checkBox_2">
+      <widget class="QCheckBox" name="Imediate">
        <property name="text">
         <string>Immédiate</string>
        </property>
       </widget>
      </item>
      <item row="14" column="2">
-      <widget class="QComboBox" name="comboBox_5"/>
+      <widget class="QComboBox" name="ResponsableAction"/>
      </item>
      <item row="1" column="0">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="Date"/>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label_16">
@@ -208,7 +208,7 @@
       </widget>
      </item>
      <item row="21" column="0" colspan="3">
-      <widget class="QTextEdit" name="textEdit_3"/>
+      <widget class="QTextEdit" name="Commentaite"/>
      </item>
      <item row="19" column="1">
       <spacer name="verticalSpacer_3">
